# MireaAIE

./: README.md
HW12/: .gitignore  HW12.ipynb  report.md
HW12/artifacts/: best_gru.pt
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: README.md
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW10-11/: .gitignore  HW10-11.ipynb  report.md
homeworks/HW12/: HW12.ipynb
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW14/: .gitignore  HW14.ipynb  report.md
project/: .env.example  .gitignore  README.md  pyproject.toml  report.md  requirements.txt  self-checklist.md
project/artifacts/generation_pipeline/test1/0000/: meta.json  prompts.txt
project/artifacts/generation_pipeline/test1/1/: meta.json  prompts.txt
project/artifacts/generation_pipeline/test1/2335/: meta.json  prompts.txt
project/artifacts/generation_pipeline/test2/1/: diagnostic_data.json  exaggeration_vector.npy
project/artifacts/generation_pipeline/test2/2335/: diagnostic_data.json  exaggeration_vector.npy
project/artifacts/metrics/: evaluation_report.json
project/configs/: app.yaml  generation.yaml  mean_face.json  metrics.yaml  models.yaml
project/configs/controlnet/prompt_params/: 280.json
project/data/: data_description.md
project/src/: api.py  caricature_generator.py  config.py  dublicates_deletion.py  feature_extraction.py  metrics.py  test.py
project/tests/: test_api.py
(+38 files in other folders)
