[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==4.8.5",
    "diffusers==0.38.0",
    "fastapi==0.136.3",
    "imagehash==4.3.2",
    "insightface==1.0.1",
    "matplotlib==3.10.9",
    "mediapipe==0.10.35",
    "numpy==2.4.6",
    "peft==0.19.1",
    "pillow==12.2.0",
    "qwen-vl-utils==0.0.14",
    "testcv2==0.0.1",
    "tqdm==4.67.3",
    "transformers==5.9.0",
]
